--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,13 @@ html, body {
 body {
     font-family: "GE Inspira Regular",sans-serif;
     font-weight: lighter;
+    background-image: url("../img/wallpaper.png");
+    background-size: 100%;
 }
 
 header {
     width: 100%;
-    height: 100vh;
-    background: url(../img/wallpaper.png) no-repeat 50% 50%;
-    background-size: cover;
+    
 }
 
 .logo {
@@ -58,4 +58,13 @@ nav ul li a {
     text-decoration: none;
     color: #fff;
     font-size: 16px;
+}
+
+.textoPerfil{
+    color:white;
+    font-size: 2em;
+}
+
+.fotoPerfil{
+    border-radius: 100px;
 }
