info: Insert information about project in Carrusel index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,11 @@ nav ul li a {
     font-size: 2em;
 }
 
+.textoDescripcionPerfil{
+    color:white;
+    font-size: 1em;
+}
+
 .fotoPerfil{
     border-radius: 100px;
 }
